crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_dependencies_engine_cpp.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
[
  "[testdata]/engine.h",
  "[testdata]/utils.h"
]
