crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_dependencies_python_models.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
[
  "abc",
  "typing"
]
