crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_file_symbols_paginated_offset.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 50,
  "offset": 100,
  "results": [
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_100",
      "kind": "function",
      "line": 101,
      "name": "func_100"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_101",
      "kind": "function",
      "line": 102,
      "name": "func_101"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_102",
      "kind": "function",
      "line": 103,
      "name": "func_102"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_103",
      "kind": "function",
      "line": 104,
      "name": "func_103"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_104",
      "kind": "function",
      "line": 105,
      "name": "func_104"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_105",
      "kind": "function",
      "line": 106,
      "name": "func_105"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_106",
      "kind": "function",
      "line": 107,
      "name": "func_106"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_107",
      "kind": "function",
      "line": 108,
      "name": "func_107"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_108",
      "kind": "function",
      "line": 109,
      "name": "func_108"
    },
    {
      "file": "[testdata]/big.cpp",
      "id": "[testdata]/big.cpp:func_109",
      "kind": "function",
      "line": 110,
      "name": "func_109"
    }
  ],
  "total": 110
}
