crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_orphans_paginated_offset.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 20,
  "offset": 20,
  "results": [
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_020",
      "kind": "function",
      "line": 21,
      "name": "func_020"
    },
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_021",
      "kind": "function",
      "line": 22,
      "name": "func_021"
    },
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_022",
      "kind": "function",
      "line": 23,
      "name": "func_022"
    },
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_023",
      "kind": "function",
      "line": 24,
      "name": "func_023"
    },
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_024",
      "kind": "function",
      "line": 25,
      "name": "func_024"
    }
  ],
  "total": 25
}
