crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_symbol_detail_engine_update.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "end_line": 10,
  "file": "[testdata]/engine.cpp",
  "id": "[testdata]/engine.cpp:Engine::update",
  "kind": "method",
  "line": 6,
  "name": "update",
  "parent": "Engine",
  "signature": "void Engine::update(float dt)"
}
